--- a/Example/GalleryDemo/GalleryDemo/Info.plist
+++ b/Example/GalleryDemo/GalleryDemo/Info.plist
@@ -26,6 +26,8 @@
 	<string>This app requires access to camera</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app requires access to photo library</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app requires access to microphone</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
